fix: bound message conversion and preserve priority