@@ -21,52 +21,95 @@ import org.jspecify.annotations.Nullable;
  * across processes, which keeps {@code gen_ai.input.messages.hash} comparable.
  */
 final class AgentScopeMessageConverter {
+    private static final int MAX_MESSAGES = 32;
+    private static final int MAX_SCANNED_PARTS = 256;
+    private static final int MAX_REASONING_PARTS = 8;
+    private static final int MAX_CONTENT_PARTS = 16;
+    private static final int MAX_TOOL_PARTS = 8;
+    private static final int MAX_NESTING_DEPTH = 16;
 
     List<Map<String, Object>> convert(@Nullable List<Msg> messages) {
+        return convertBounded(messages).messages();
+    }
+
+    ConversionResult convertBounded(@Nullable List<Msg> messages) {
         if (messages == null || messages.isEmpty()) {
-            return List.of();
+            return new ConversionResult(List.of(), true);
         }
-        List<Map<String, Object>> result = new ArrayList<>(messages.size());
-        for (Msg message : messages) {
-            if (message != null) {
-                result.add(convert(message));
+        SelectionLimits limits = new SelectionLimits();
+        List<Map<String, Object>> selected = new ArrayList<>();
+        int firstMessage = Math.max(0, messages.size() - MAX_MESSAGES);
+        if (firstMessage > 0) {
+            limits.incomplete = true;
+        }
+        for (int index = messages.size() - 1; index >= firstMessage; index--) {
+            Msg message = messages.get(index);
+            if (message == null) {
+                continue;
+            }
+            List<Map<String, Object>> parts = convertParts(message.getContent(), limits, 0);
+            if (!parts.isEmpty()) {
+                selected.add(0, convertMessage(message, parts));
+            }
+            if (limits.scanExhausted()) {
+                limits.incomplete = true;
+                break;
             }
         }
-        return List.copyOf(result);
+        return new ConversionResult(List.copyOf(selected), !limits.incomplete);
     }
 
     Map<String, Object> convert(Msg message) {
+        return convertBounded(List.of(message)).messages().stream()
+                .findFirst()
+                .orElseGet(() -> convertMessage(message, List.of()));
+    }
+
+    private static Map<String, Object> convertMessage(
+            Msg message, List<Map<String, Object>> parts) {
         Map<String, Object> result = new LinkedHashMap<>();
         String role =
                 message.getRole() == null
                         ? "user"
                         : message.getRole().name().toLowerCase(Locale.ROOT);
         result.put("role", role);
-        result.put("parts", convertParts(message.getContent()));
+        result.put("parts", parts);
         if (message.getName() != null && !message.getName().isBlank()) {
             result.put("name", message.getName());
         }
         return Collections.unmodifiableMap(result);
     }
 
-    private List<Map<String, Object>> convertParts(@Nullable List<ContentBlock> blocks) {
+    private List<Map<String, Object>> convertParts(
+            @Nullable List<ContentBlock> blocks, SelectionLimits limits, int depth) {
         if (blocks == null || blocks.isEmpty()) {
             return List.of();
         }
-        List<Map<String, Object>> parts = new ArrayList<>(blocks.size());
-        for (ContentBlock block : blocks) {
-            Map<String, Object> part = convertPart(block);
+        if (depth >= MAX_NESTING_DEPTH) {
+            limits.incomplete = true;
+            return List.of();
+        }
+        List<Map<String, Object>> parts = new ArrayList<>();
+        for (int index = blocks.size() - 1; index >= 0; index--) {
+            if (!limits.tryScan()) {
+                break;
+            }
+            ContentBlock block = blocks.get(index);
+            PartKind kind = PartKind.of(block);
+            if (block == null || !limits.tryAcquire(kind)) {
+                limits.incomplete = true;
+                continue;
+            }
+            Map<String, Object> part = convertPart(block, limits, depth);
             if (part != null) {
-                parts.add(part);
+                parts.add(0, part);
             }
         }
         return List.copyOf(parts);
     }
 
-    private @Nullable Map<String, Object> convertPart(@Nullable ContentBlock block) {
-        if (block == null) {
-            return null;
-        }
+    private @Nullable Map<String, Object> convertPart(
+            ContentBlock block, SelectionLimits limits, int depth) {
         if (block instanceof TextBlock text) {
             return part("text", "content", defaultText(text.getText()));
         }
@@ -74,19 +117,19 @@ final class AgentScopeMessageConverter {
             return part("reasoning", "content", defaultText(thinking.getThinking()));
         }
         if (block instanceof ToolUseBlock tool) {
-            Map<String, Object> part = new LinkedHashMap<>();
-            part.put("type", "tool_call");
-            part.put("id", defaultText(tool.getId()));
-            part.put("name", defaultText(tool.getName()));
-            part.put("arguments", tool.getInput() == null ? Map.of() : tool.getInput());
-            return Collections.unmodifiableMap(part);
+            Map<String, Object> result = new LinkedHashMap<>();
+            result.put("type", "tool_call");
+            result.put("id", defaultText(tool.getId()));
+            result.put("name", defaultText(tool.getName()));
+            result.put("arguments", tool.getInput() == null ? Map.of() : tool.getInput());
+            return Collections.unmodifiableMap(result);
         }
         if (block instanceof ToolResultBlock toolResult) {
-            Map<String, Object> part = new LinkedHashMap<>();
-            part.put("type", "tool_call_response");
-            part.put("id", defaultText(toolResult.getId()));
-            part.put("result", convertParts(toolResult.getOutput()));
-            return Collections.unmodifiableMap(part);
+            Map<String, Object> result = new LinkedHashMap<>();
+            result.put("type", "tool_call_response");
+            result.put("id", defaultText(toolResult.getId()));
+            result.put("result", convertParts(toolResult.getOutput(), limits, depth + 1));
+            return Collections.unmodifiableMap(result);
         }
         return part(
                 block.getClass().getSimpleName().toLowerCase(Locale.ROOT),
@@ -103,5 +146,56 @@ final class AgentScopeMessageConverter {
 
     private static String defaultText(@Nullable String value) {
         return value == null ? "" : value;
+    }
+
+    record ConversionResult(List<Map<String, Object>> messages, boolean complete) {
+        ConversionResult {
+            messages = List.copyOf(messages);
+        }
+    }
+
+    private enum PartKind {
+        REASONING,
+        CONTENT,
+        TOOL;
+
+        private static PartKind of(@Nullable ContentBlock block) {
+            if (block instanceof ThinkingBlock) {
+                return REASONING;
+            }
+            if (block instanceof ToolUseBlock || block instanceof ToolResultBlock) {
+                return TOOL;
+            }
+            return CONTENT;
+        }
+    }
+
+    private static final class SelectionLimits {
+        private int scannedParts;
+        private int reasoningParts;
+        private int contentParts;
+        private int toolParts;
+        private boolean incomplete;
+
+        private boolean tryScan() {
+            if (scannedParts >= MAX_SCANNED_PARTS) {
+                incomplete = true;
+                return false;
+            }
+            scannedParts++;
+            return true;
+        }
+
+        private boolean scanExhausted() {
+            return scannedParts >= MAX_SCANNED_PARTS;
+        }
+
+        private boolean tryAcquire(PartKind kind) {
+            return switch (kind) {
+                case REASONING -> reasoningParts++ < MAX_REASONING_PARTS;
+                case CONTENT -> contentParts++ < MAX_CONTENT_PARTS;
+                case TOOL -> toolParts++ < MAX_TOOL_PARTS;
+            };
+        }
     }
 }
